--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "js-beautify": "^1.6.14",
     "vue": "^2.4.2",
+    "vue-router": "^2.7.0",
     "vuetify": "^0.15.7",
     "vuex": "^2.4.0"
   },
