--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "cosmicjs": "^2.4.11",
     "js-beautify": "^1.6.14",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
@@ -18,11 +19,11 @@
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-add-filehash": "^6.9.4",
+    "babel-plugin-transform-imports": "^1.4.1",
     "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "babel-plugin-add-filehash": "^6.9.4",
-    "babel-plugin-transform-imports": "^1.4.1",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
