--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.4",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
+    "vue-spinner": "^1.0.2",
     "vuetify": "^0.15.7",
     "vuex": "^2.4.0"
   },
