--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "cosmicjs": "^2.4.11",
     "js-beautify": "^1.6.14",
     "lodash": "^4.17.4",
+    "vee-validate": "^2.0.0-rc.17",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
     "vue-spinner": "^1.0.2",
+    "vue-wysiwyg": "^1.2.6",
     "vuetify": "^0.15.7",
     "vuex": "^2.4.0"
   },
